--- a/NewsWebsite/Pages/Users/Login.cshtml
+++ b/NewsWebsite/Pages/Users/Login.cshtml
@@ -14,6 +14,13 @@
             <input asp-for="Input.Username" class="form-control" autofocus />
             <span asp-validation-for="Input.Username" class="form-error"></span>
         </div>
+
+        <div class="form-group">
+            <label asp-for="Input.Password" class="form-label">Пароль</label>
+            <input asp-for="Input.Password" type="password" class="form-control" />
+            <span asp-validation-for="Input.Password" class="form-error"></span>
+        </div>
+
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">Увійти</button>
         </div>
