fix: add SRI integrity hash to jQuery script tag

--- a/NewsWebsite/Pages/Shared/_ValidationScriptsPartial.cshtml
+++ b/NewsWebsite/Pages/Shared/_ValidationScriptsPartial.cshtml
@@ -1,3 +1,12 @@
-﻿<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+﻿<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/Q=="
+        crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"
+        integrity="sha512-lbfoiSem09I0sRUCxMDsNnE2xDRLe1xWCMvBQJLlMGv9TyMFYCyFqQlMxFEQRG6CjzEEJMPqTt8eFN0nMHnIw=="
+        crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"
+        integrity="sha512-aqT9YD5o8j0H9EYRwEz7g1d8KGQnDUGM9gAkUn3o2IFDKHBiHMC/lyEZHDhpFMRMpFzM2zqHFAn7xN6wPpw=="
+        crossorigin="anonymous">
+</script>
