--- a/NewsWebsite/Pages/Users/Login.cshtml
+++ b/NewsWebsite/Pages/Users/Login.cshtml
@@ -3,31 +3,25 @@
 @{
     ViewData["Title"] = "Увійти";
 }
-
 <div class="auth-wrap">
     <div class="auth-title">Увійти</div>
     <div class="auth-subtitle">Редакційна система «Вісник»</div>
-
     <form method="post">
         <div class="form-group">
-            <label asp-for="Input.Username" class="form-label">Ім'я користувача</label>
-            <input asp-for="Input.Username" class="form-control" autofocus />
+            <label asp-for="Input.Username" class="form-label" for="Input_Username">Ім'я користувача</label>
+            <input asp-for="Input.Username" class="form-control" autofocus id="Input_Username" />
             <span asp-validation-for="Input.Username" class="form-error"></span>
         </div>
-
         <div class="form-group">
-            <label asp-for="Input.Password" class="form-label">Пароль</label>
-            <input asp-for="Input.Password" type="password" class="form-control" />
+            <label asp-for="Input.Password" class="form-label" for="Input_Password">Пароль</label>
+            <input asp-for="Input.Password" type="password" class="form-control" id="Input_Password" />
             <span asp-validation-for="Input.Password" class="form-error"></span>
         </div>
-
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">Увійти</button>
         </div>
     </form>
-
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
